--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -88,7 +88,7 @@
     <h1>Dashboard for Voting Behavior</h1>
     <div>
 
-        <div class="chart-container" style="width: 500px; float: right;">
+        <div class="chart-container" style="width: 500px; margin: auto;">
             <canvas id="chart"></canvas>
         </div>
     </div>
