--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -52,50 +52,34 @@
               <li class="nav-item">
               <a class="nav-link" href="{% url 'politician' politician_id='1' %}">Politician View</a>
             </li>
-
-            <li class="nav-item">
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
-                <i class="fas fa-align-left"></i>
-                <span>Toggle Sidebar</span>
-            </button>
-              </li>
           </ul>
         </div>
 
     </nav>
     {% endblock %}
 
-    <div class="wrapper">
-    <!-- Sidebar -->
-    <nav id="sidebar">
-        <div class="sidebar-header">
-            <h3>Bootstrap Sidebar</h3>
-        </div>
-
-        <ul class="list-unstyled components">
-            <li class="active">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Datetimepicker</a>
-                <div class="collapse list-unstyled" id="homeSubmenu">
-    <div id="form-container" style="float: left;">
-            <div id="report-range" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc;">
+    <div class="sidenav">
+    <!-- margin -->
+    <div style="margin-top: 65px"></div>
+    Zeitraum auswählen:
+    <div id="form-container">
+            <div id="report-range" style="background: #fff; cursor: pointer;">
                 <i class="fa fa-calendar"></i>&nbsp;
-                <span></span> <i class="fa fa-caret-down"></i>
+                <span style="color: black"></span> <i class="fa fa-caret-down"></i>
             </div>
 
             <form id="datetime_picker_form" action="{% block request_path %}{% url 'index' %}{% endblock %}" method="post">
                     {% csrf_token %}
                     {{ date_form.as_table }}
-                <button id="datetime_picker_submit" type="submit" value="OK">OK</button>
+                <button id="datetime_picker_submit" type="submit" value="OK" class="btn btn-light" style="width: 50%;margin: 20px 0px 0px 30px;">OK</button>
             </form>
         </div>
-                </div>
+    </div>
 
-        </ul>
-    </nav>
-    <div id="content">
+    <div id="content" style="margin-left: 160px">
         {% block content %}{% endblock %}
     </div>
-</div>
+
 
 
 </body>
