--- a/dashboard/templates/dashboard/error.html
+++ b/dashboard/templates/dashboard/error.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{{ error }}
+    <div align="center" style="margin-top: 300px">
+        <h1 style="color: #c82333">{{ error }}</h1>
+    </div>
 {% endblock %}
