--- a/dashboard/templates/dashboard/voting_table.html
+++ b/dashboard/templates/dashboard/voting_table.html
@@ -17,7 +17,7 @@
     <tbody>
         {% if individual_votes %}
             {% for voting, vote in votings|zip:individual_votes %}
-            <tr{% if vote == 'Ja' %} style="background-color: #8fd19e"{% elif vote == 'Nein' %} style="background-color: #c82333"{% elif vote == 'Enthalten' %} style="background-color: #454d55"{% elif vote == 'Nicht abgegeben' %} style="background-color: #533f03"{% endif %}>
+            <tr{% if vote == 'Ja' %} style="background-color: #96F786"{% elif vote == 'Nein' %} style="background-color: #FF6384"{% elif vote == 'Enthalten' %} style="background-color: #F0EC81"{% elif vote == 'Nicht abgegeben' %} style="background-color: #70AEFF"{% endif %}>
                 <td>{% if voting.voting_id %}<button type="submit" class="btn btn-primary" form="datetime_picker_form" formaction="{% url 'detail' voting.voting_id %}">{{ voting.voting_id }}</button>{% else %} - {% endif %}</td>
                 <td>{{ voting.date }}</td>
                 <td>{{ voting.description }}</td>
