--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load voting_behaviour_extras %}
 {% block title %} Index {% endblock %}
 {% block scripts %}
 
@@ -7,6 +8,20 @@
     <script type="text/javascript">
     $(document).ready(function(){
 
+    $("#toggle-voting-sidebar").on("click", function () {
+        if ($("#voting-sidebar").hasClass('closed')) {
+            $("#voting-sidebar").removeClass('closed');
+            $("#voting-sidebar").addClass('opened');
+            $("#voting-sidebar").css('width', '30%');
+            $("#content").css('marginRight', '30%');
+        }
+        else if ($("#voting-sidebar").hasClass('opened')) {
+            $("#voting-sidebar").removeClass('opened');
+            $("#voting-sidebar").addClass('closed');
+            $("#voting-sidebar").css('width', '0');
+            $("#content").css('marginRight', '0');
+        }
+    });
 
         var chart_data = {
             labels: {{ genre_labels|safe }},
@@ -62,7 +77,7 @@
         },
                 title:{
                     display: true,
-                    text: "Von {{ start_date }} bis {{ end_date }} gab es {{ voting_count }} Abstimmungen."
+                    text: "Vom {{ start_date }} bis zum {{ end_date }} gab es {{ voting_count }} Abstimmungen."
                 },
                 scales: {
                     yAxes: [{
@@ -77,24 +92,48 @@
 
     });
     </script>
-    <style type="text/css">table tbody tr:last-child td{border-top: 5px solid aliceblue} input, label {
-    display:block;
-}</style>
+    <style type="text/css">
+        #vote_counts tbody tr:last-child td{border-top: 5px solid aliceblue}
+        input, label {display:block;}
+        .arrow-right {
+              border: solid #007bff;
+              border-width: 0 3px 3px 0;
+              display: inline-block;
+              padding: 3px;
+              transform: rotate(-45deg);
+              -webkit-transform: rotate(-45deg);
+            }
+
+    .row1 {background-color: #aaaaaa}
+    .row2 {background-color: grey}
+    #voting-sidebar {
+        height: 100%;
+        width: 0px;
+        margin-left: 0px;
+        position: fixed;
+        top: 0;
+        right: 0;
+        margin-top: 20px;
+        overflow-x: hidden;
+        color: white;
+        border-left: 1px solid black;
+    }
+    </style>
 {% endblock %}
 {% block request_path %}{{ request.path }}{% endblock %}
 
 {% block content %}
+    <button id="toggle-voting-sidebar" style="float: right;" class="btn btn-primary">Letzte Abstimmungen</button>
     <div style="width: 100%;" align="center">
     <h1>Dashboard - Bundestagsabstimmungen</h1>
     <div>
-
         <div class="chart-container" style="width: 1000px; margin: auto;">
             <canvas id="chart"></canvas>
         </div>
     </div>
-    <div style="clear: both;"></div>
+    <div style="clear: both; padding-top: 100px"></div>
     <h3>Individuelle Parteien und deren Stimmen</h3>
-    <table class="table">
+    <table class="table" id="vote_counts">
     <thead>
     <tr>
     <th>Faction</th>
@@ -116,7 +155,7 @@
             </tr>
         {% endfor %}
             <tr>
-            <td>Total</td>
+            <td>Summe</td>
                 {% for count in total_votes.values %}
                 <td>{{ count }}</td>
                 {% endfor %}
@@ -124,4 +163,28 @@
     </tbody>
     </table>
     </div>
+    <div id="voting-sidebar" class="closed">
+        <h3>Die letzten 10 Abstimmungen</h3>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Zeit</th>
+                    <th>Genre</th>
+                    <th>Beschreibung</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for voting in last_ten_votings %}
+                    <tr>
+                        <td>Vor {{ voting.date|date_difference }} Tagen</td>
+                        <td>{{ voting.genre }}</td>
+                        <td>{{ voting.topic }}</td>
+                        <td>{% if voting.voting_id %}<button type="submit" class="btn btn-link" form="datetime_picker_form" formaction="{% url 'detail' voting.voting_id %}"><i class="arrow-right"></i></button>{% else %} - {% endif %}</td>
+                    </tr>
+
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
 {% endblock %}
