--- a/dashboard/templates/dashboard/politician.html
+++ b/dashboard/templates/dashboard/politician.html
@@ -58,7 +58,7 @@
 
                 title:{
                     display: true,
-                    text: "Von {{ start_date }} bis {{ end_date }} gab es {{ voting_count }} Abstimmungen."
+                    text: "Vom {{ start_date }} bis zum {{ end_date }} war {{ politician.pre_name }} {{ politician.name }} an {{ voting_count }} Abstimmungen beteiligt."
                 },
                 scales: {
                     xAxes: [{stacked: true}],
