--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -77,7 +77,7 @@
         },
                 title:{
                     display: true,
-                    text: "Vom {{ start_date }} bis zum {{ end_date }} gab es {{ voting_count }} Abstimmungen."
+                    text: "Vom {{ start_date }} bis zum {{ end_date }} gab es {{ votings_count }} Abstimmungen."
                 },
                 scales: {
                     yAxes: [{
@@ -110,6 +110,7 @@
         height: 100%;
         width: 0px;
         margin-left: 0px;
+        z-index: 1;
         position: fixed;
         top: 0;
         right: 0;
