--- a/dashboard/templates/dashboard/detail.html
+++ b/dashboard/templates/dashboard/detail.html
@@ -17,22 +17,30 @@
         var chart_data = {
             labels: {{ vote_labels|safe }},
             datasets: [{
-                label: '# of Votes',
                 data: {{ votes|safe }},
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(150, 247, 134, 0.2)',
                     'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(240, 236, 129, 0.4)',
+                    'rgba(112, 174, 255, 0.2)',
                     'rgba(255, 159, 64, 0.2)'
                 ],
+                hoverBackgroundColor: [
+                    'rgba(255, 99, 132, 0.8)',
+                    'rgba(150, 247, 134, 0.8)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(240, 236, 129, 0.8)',
+                    'rgba(112, 174, 255, 0.8)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+
                 borderColor: [
                     'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
+                    'rgba(150, 247, 134, 1)',
                     'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
+                    'rgba(240, 236, 129, 1)',
+                    'rgba(112, 174, 255, 1)',
                     'rgba(255, 159, 64, 1)'
                 ],
                 borderWidth: 1
@@ -44,6 +52,17 @@
         type: 'doughnut',
         data: chart_data,
             options: {
+                title:{
+                    display: true,
+                    text: "Stimmenverteilung"
+                },
+            legend: {
+                      display: true,
+                      position: 'bottom',
+                      labels: {
+                        fontColor: "#000080",
+                      }
+                    },
                 scales: {
                     yAxes: [{
                         ticks: {
@@ -54,10 +73,10 @@
             }
         });
         var chart_data_faction_votes = {
-            labels: {{ faction_labels|safe }},
+            labels: {{ labels|safe }},
             datasets: [{
                 label: 'Ja',
-                data: {{ faction_votes_count.0|safe }},
+                data: {{ vote_counts.0|safe }},
                 backgroundColor: 'rgba(150, 247, 134, 0.2)',
                 hoverBackgroundColor: "rgba(150, 247, 134, 0.8)",
                 borderColor: 'rgba(150, 247, 134, 1)',
@@ -65,7 +84,7 @@
                 },
                 {
                 label: 'Nein',
-                data: {{ faction_votes_count.1|safe }},
+                data: {{ vote_counts.1|safe }},
                 backgroundColor: "rgba(255, 99, 132, 0.2)",
                 hoverBackgroundColor: "rgba(255, 99, 132, 0.8)",
                 borderColor: 'rgba(255, 99, 132, 1)',
@@ -73,15 +92,15 @@
                 },
                 {
                 label: 'Enthalten',
-                data: {{ faction_votes_count.2|safe }},
+                data: {{ vote_counts.2|safe }},
                 backgroundColor: 'rgba(240, 236, 129, 0.4)',
                 hoverBackgroundColor: "rgba(240, 236, 129, 0.8)",
-                borderColor: 'rgba(240, 236, 129, 1)',
+                borderColor: 'rgba(254, 236, 129, 1)',
                 borderWidth:1
                 },
                 {
                 label: 'Nicht abgegeben',
-                data: {{ faction_votes_count.3|safe }},
+                data: {{ vote_counts.3|safe }},
                 backgroundColor: 'rgba(112, 174, 255, 0.2)',
                 hoverBackgroundColor: "rgba(112, 174, 255, 0.8)",
                 borderColor: 'rgba(112, 174, 255, 1)',
@@ -104,7 +123,7 @@
 
                 title:{
                     display: true,
-                    text: "Stimmen nach Parteien."
+                    text: "Stimmen nach Parteien"
                 },
                 scales: {
                     xAxes: [{stacked: true}],
@@ -122,7 +141,27 @@
     chart.destroy();
     chart = new Chart(ctx, {
     type: this.value,
-    data: chart_data
+    data: chart_data,
+    options: {
+        title:{
+                display: true,
+                text: "Stimmenverteilung"
+            },
+        legend: {
+                  display: true,
+                  position: 'bottom',
+                  labels: {
+                    fontColor: "#000080",
+                  }
+                },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
   });
 });
 
@@ -150,7 +189,7 @@
     </select>
         <select id="faction_select" class="browser-default custom-select" style="width: 50%;float: left;">
         <option value="all">Alle Parteien anzeigen</option>
-        {% for faction in all_factions %}
+        {% for faction in factions %}
             <option value="{{ faction|cut:" "|cut:"/" }}">{{ faction }}</option>
         {% endfor %}
     </select>
