--- a/dashboard/templates/dashboard/voting_table.html
+++ b/dashboard/templates/dashboard/voting_table.html
@@ -1,4 +1,5 @@
 {% load voting_behaviour_extras %}
+<h2 align="center">{{ votings|length }} Abstimmungen für den Zeitraum vom {{ start_date }} bis zum {{ end_date }}</h2>
 <table class="table">
     <thead>
     <tr>
