--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -32,22 +32,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <!-- Links -->
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'detail' voting_id='5' %}">Detail View</a>
+              <li class="nav-item">
+              <button type="submit" class="btn btn-default navbar-btn" style="color: rgba(255, 255, 255, 0.5);" form="datetime_picker_form" formaction="{% url 'list'%}">Abstimmungen</button>
             </li>
+              <!--
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'list'%}">List of votings</a>
+              <button type="submit" class="btn btn-default navbar-btn" style="color: rgba(255, 255, 255, 0.5);" form="datetime_picker_form" formaction="{% url 'detail' voting_id=1%}">Detail</button>
             </li>
               <li class="nav-item">
-              <a class="nav-link" href="{% url 'genre' name='Inneres' %}">Genre View</a>
+              <button type="submit" class="btn btn-default navbar-btn" style="color: rgba(255, 255, 255, 0.5);" form="datetime_picker_form" formaction="{% url 'genre' name='Inneres'%}">Abstimmungen nach Genres</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'faction' name='AFD' %}">Faction View</a>
+              <button type="submit" class="btn btn-default navbar-btn" style="color: rgba(255, 255, 255, 0.5);" form="datetime_picker_form" formaction="{% url 'faction' name='AFD'%}">Abstimmungen nach Parteien</button>
             </li>
               <li class="nav-item">
-              <a class="nav-link" href="{% url 'politician' politician_id='1' %}">Politician View</a>
+              <button type="submit" class="btn btn-default navbar-btn" style="color: rgba(255, 255, 255, 0.5);" form="datetime_picker_form" formaction="{% url 'politician' politician_id=1%}">Politiker</button>
             </li>
-                            <li class="nav-item">
+            -->
+              <li class="nav-item">
               <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
             </li>
           </ul>
