translate to german, ui changes

--- a/dashboard/templates/dashboard/faction_votes.html
+++ b/dashboard/templates/dashboard/faction_votes.html
@@ -58,7 +58,7 @@
 
                 title:{
                     display: true,
-                    text: "Stimmen der Abgeordneten der {{ name }}  vom {{ start_date }} bis zum {{ end_date }}."
+                    text: "Stimmen der Abgeordneten der Partei '{{ name }}' vom {{ start_date }} bis zum {{ end_date }}."
                 },
                 scales: {
                     xAxes: [{stacked: true}],
