--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -137,7 +137,7 @@
     <table class="table" id="vote_counts">
     <thead>
     <tr>
-    <th>Faction</th>
+    <th>Partei</th>
         {% for val in faction_votes.values %}
             {% if forloop.first %}
                 {% for vote in val.keys %}
