minor language correction

--- a/dashboard/templates/dashboard/detail.html
+++ b/dashboard/templates/dashboard/detail.html
@@ -195,9 +195,9 @@
         <table id="faction_table" class="table">
             <thead>
                 <tr>
-                    <th>Faction</th>
+                    <th>Partei</th>
                     <th>Name</th>
-                    <th>Vote</th>
+                    <th>Stimme</th>
                 </tr>
             </thead>
             <tbody>
