--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -34,7 +34,29 @@
                     'rgba(255, 206, 86, 0.2)',
                     'rgba(75, 192, 192, 0.2)',
                     'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
+                    'rgba(255, 159, 64, 0.2)',
+                    'rgba(123, 215, 23, 0.2)',
+                    'rgba(32, 91, 236, 0.2)',
+                    'rgba(138, 20, 180, 0.2)',
+                    'rgba(185, 204, 21, 0.2)',
+                    'rgba(3, 185, 235, 0.2)',
+                    'rgba(19, 138, 157, 0.2)',
+                    'rgba(23, 164, 124, 0.2)',
+                    'rgba(221, 187, 14, 0.2)',
+                    'rgba(244, 48, 26, 0.2)',
+                    'rgba(51, 83, 34, 0.2)',
+                    'rgba(68, 65, 109, 0.2)',
+                    'rgba(86, 179, 244, 0.2)',
+                    'rgba(136, 32, 147, 0.2)',
+                    'rgba(123, 244, 33, 0.2)',
+                    'rgba(126, 130, 36, 0.2)',
+                    'rgba(210, 188, 187, 0.2)',
+                    'rgba(216, 122, 180, 0.2)',
+                    'rgba(121, 218, 108, 0.2)',
+                    'rgba(204, 50, 12, 0.2)',
+                    'rgba(210, 188, 187, 0.2)',
+                    'rgba(12, 218, 151, 0.2)',
+                    'rgba(55, 43, 106, 0.2)'
                 ],
                 borderColor: [
                     'rgba(255, 99, 132, 1)',
@@ -42,7 +64,29 @@
                     'rgba(255, 206, 86, 1)',
                     'rgba(75, 192, 192, 1)',
                     'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
+                    'rgba(255, 159, 64, 1)',
+                    'rgba(123, 215, 23, 1)',
+                    'rgba(32, 91, 236, 1)',
+                    'rgba(138, 20, 180, 1)',
+                    'rgba(185, 204, 21, 1)',
+                    'rgba(3, 185, 235, 1)',
+                    'rgba(19, 138, 157, 1)',
+                    'rgba(23, 164, 124, 1)',
+                    'rgba(221, 187, 14, 1)',
+                    'rgba(244, 48, 26, 1)',
+                    'rgba(51, 83, 34, 1)',
+                    'rgba(68, 65, 109, 1)',
+                    'rgba(86, 179, 244, 1)',
+                    'rgba(136, 32, 147, 1)',
+                    'rgba(123, 244, 33, 1)',
+                    'rgba(126, 130, 36, 1)',
+                    'rgba(210, 188, 187, 1)',
+                    'rgba(216, 122, 180, 1)',
+                    'rgba(121, 218, 108, 1)',
+                    'rgba(204, 50, 12, 1)',
+                    'rgba(210, 188, 187, 1)',
+                    'rgba(12, 218, 151, 1)',
+                    'rgba(55, 43, 106, 1)',
                 ],
                 borderWidth: 1
             }]
